# test-opengl

./: .gitignore  README.md
test-opengl/: CMakeLists.txt  config.h.in
test-opengl/hello_glfw/: CMakeLists.txt  GLFWWindowBase.h  HellGLFW.cpp  HellGLFW.h
test-opengl/hello_opengl/: CMakeLists.txt
test-opengl/include/genvid/: genvid.h
test-opengl/include/glad/: glad.h
test-opengl/libs/: assimp.lib  genvid.lib  glad.lib
test-opengl/libs/assimp/: assimp.exp  assimp_d.exp  assimp_d.lib
test-opengl/libs/glfw/: glfw3.lib
test-opengl/res/: file.mtl
test-opengl/src/: main.cpp
test-opengl/src/common/: billboard_list.cpp  billboard_list.h  camera.cpp  camera.h  const.h  g_buffer.cpp  g_buffer.h  glad.c  i_callbacks.h  light.h  mesh.cpp  mesh.h  partical_system.cpp  partical_system.h  pipline.cpp  pipline.h  shadow_map_fbo.cpp  shadow_map_fbo.h  skybox.cpp  skybox.h  technique.cpp  technique.h  texture.cpp  texture.h  utils.cpp  utils.h
test-opengl/src/glfw_window/: glfw_window.cpp  glfw_window.h
test-opengl/src/hello_glfw/: CMakeLists.txt  GLFWWindowBase.h  HellGLFW.cpp  HellGLFW.h  HelloGLFW.cpp  HelloGLFW.h
test-opengl/src/hello_opengl/: CMakeLists.txt  hello_opengl.cpp  hello_opengl.h  hello_opengl_2.cpp
test-opengl/src/math3d/: math3d.cpp  math3d.h  math3d_ex.cpp  math3d_ex.h
test-opengl/src/math_3d/: matrix.cpp  matrix.h
test-opengl/src/nxgenvid/: nxgenvid.cpp  nxgenvid.h
test-opengl/src/practice_ogl/: camera.cpp  camera.h  const.h  light.h  main.cpp  mesh.cpp  mesh.h  pipline.cpp  pipline.h  technique.cpp  technique.h  texture.cpp  texture.h  tutorial_billboard.cpp  tutorial_billboard.h  tutorial_deferred_shading.cpp  tutorial_deferred_shading.h  tutorial_instanced_render.cpp  tutorial_instanced_render.h  tutorial_normal_map.cpp  tutorial_normal_map.h  tutorial_partical_system.cpp  tutorial_partical_system.h  tutorial_pbr.cpp  tutorial_pbr.h  tutorial_picking.cpp  tutorial_picking.h  tutorial_point_light.cpp  tutorial_point_light.h  tutorial_practice.cpp  tutorial_practice.h  tutorial_shadow_map.cpp  tutorial_shadow_map.h  tutorial_spot_light.cpp  tutorial_spot_light.h  tutorial_stencil_shadow.cpp  tutorial_stencil_shadow.h  tutorial_tessellation.cpp  tutorial_tessellation.h
test-opengl/src/ray_tracing/: main.cpp  ray_tracing.cpp  ray_tracing.h  scene.cpp  scene.h
test-opengl/src/shaders/: ambiance.ps  ambiance.vert  ambiance.vs  billboard.frag  billboard.geom  billboard.vert  deferred_shading.vert  direction_light.frag  ds_dir_light_pass.frag  ds_geometry_pass.frag  ds_geometry_pass.vert  ds_light_pass.vert  ds_point_light_pass.frag  instance_render.frag  instance_render.vert  lighting_technique.frag  lighting_technique.vert  null_technique.vert  pbr.frag  pbr.vert  picking.frag  picking.vert  point_light.frag  point_light.vert  ps_update.geom  ps_update.vert  shadow_map.frag  shadow_map.vert  silhouette.frag  silhouette.geom  silhouette.vert  simple_show.frag  simple_show.vert  skybox.frag  skybox.vert  spot_light.frag  stencil_shadow_volume.geom  stencil_shadow_volume.vert  tessellation.frag  tessellation.tessc  (+4 more)
test-opengl/src/util/: practice_header.h  util.cpp  util.h
